# fdtd-toolbox

./: README.md
emulation/: emulation.vcproj
emulation/include/: constants.h  data_types.h  fdtd.h  globals.h
emulation/src/exec/: calc_sig_cur.c  conductivity.c  main.c  medium.c  reports.c  setpar.c
emulation/src/fdtd/: drude.c  fdtd.c  fdtd_cpml.c  fdtd_tfsf.c
emulation/src/save/: save_dat.c  save_vtr.cpp
examples/common/: main.c
libfdtd/: CMakeLists.txt
libfdtd/include/: data.h  functions.h
libfdtd/solver/: conductivity.c.cant_compile  debye.c  drude.c  fdtd.c  fdtd_bnd.c  fdtd_cpml.c  fdtd_mur.c  fdtd_nfff.c  fdtd_tfsf.c
libfdtd/utils/: calc_sig_cur.c  cells.c  globals.c  medium.c  reports.c  setup.c  time.c
libfdtd/utils/load/: setpar.c
libfdtd/utils/save/: auto_save.c  save_dat.c
radiation/: dft.cpp  main.cpp  radiation.vcproj
tools/: readme
tools/tfsf-pattern/: read_data.cpp
